Fixed Logo Overflowing

--- a/styles.css
+++ b/styles.css
@@ -188,7 +188,9 @@ a:active{
 }
 
 #ragam-logo {
-  height: 30vh; margin-top: -50px; margin-bottom: -50px;
+  height: 30vh; 
+  margin-top: -50px; 
+  margin-bottom: -50px;
 }
 @media only screen and (max-width: 600px) {
   .main {
